# aocLib

./: aocLib.cabal  flake.nix  readme.md
src/: AocParse.hs  AocPoint.hs
