cabal-version:   3.0
name:            aocLib
version:         0.1.0.0
synopsis:        a advent of code library
license:         MIT
license-file:    LICENSE
author:          fergus
maintainer:      fergus@molloy.xyz
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AocParse,
                      AocPoint

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
